tests/ui/typeck/typeck-cast-pointer-to-float.stderr
error[E0606]: casting `*const i16` as `f32` is invalid
  --> $DIR/typeck-cast-pointer-to-float.rs:3:5
   |
LL |     ((&x) as *const i16) as f32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0606`.
